Replace some terms
Replace "canonical ordering" with "embedding"
Replace "graph" with "maximal planar graph"

--- a/draw_schnyder_realizer.html
+++ b/draw_schnyder_realizer.html
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 			<div style="display:block;float:left;padding-left:2%;">
-				<p style="text-align:center;">Canonical Ordering</p>
+				<p style="text-align:center;">Embedding</p>
 				<textarea cols="20" rows="12" id="txta-minimale" disabled>
 [2,3,1],
 [0,3,2],
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 			<div style="display:block;float:left;padding-left:2%;">
-				<p style="text-align:center;">Canonical Ordering</p>
+				<p style="text-align:center;">Embedding</p>
 				<textarea cols="20" rows="12" id="txta-piu-complesso" disabled>
 [2,3,8,9,1],
 [0,9,10,6,2],
@@ -91,7 +91,7 @@
 
 
 		<div style="margin:auto;width:70%;padding-bottom:25%;">
-			<h1 style="text-align:center;">Insert a canonical ordering of a graph</h1>
+			<h1 style="text-align:center;">Insert an embedding of a maximal planar graph</h1>
 			<div style="float:left;margin:auto;padding-top:2%;">
 				<p style="text-align:center" id="p-user-input"></p>
 			</div>
