--- a/draw_schnyder_realizer.html
+++ b/draw_schnyder_realizer.html
@@ -132,7 +132,7 @@
 
 				console.log();
 
-				var edges = draw(embedding);
+				var edges = schnyder_realizer(embedding);
 
 				// Add external edges
 				edges.push({from : 0, to : 1, tree : -1});
