--- a/draw_schnyder_realizer.html
+++ b/draw_schnyder_realizer.html
@@ -115,7 +115,7 @@
 				<img src="minimal_triangular_graph.png" style="display:block;margin-left:auto;margin-right:auto;padding-left:2%;"/>
 			</div>
 		</div>
-		<script src="draw_schnyder.js"></script>
+		<script src="schnyder_realizer.js"></script>
 		<script>
 			function main(id_suffix)
 			{
